--- a/HtmlPage2.html
+++ b/HtmlPage2.html
@@ -76,7 +76,7 @@
 
     <p style="font-size: 30pt">
         Code: <br />
-        <img src="Chapter 4.1 example.png" />
+        <img src="Chapter 4.1 example.PNG" />
 
 
     </p>
