--- a/HtmlPage3.html
+++ b/HtmlPage3.html
@@ -73,7 +73,7 @@
 
     <p>
         Code: <br />
-        <img src="Chapter 4.3 example.png" />
+        <img src="Chapter 4.3 example.PNG" />
     </p>
 
     
