--- a/HtmlPage4.html
+++ b/HtmlPage4.html
@@ -64,7 +64,7 @@
 
     <p>
         Code: <br />
-        <img src="Chapter 5.1 example.png" />
+        <img src="Chapter 5.1 example.PNG" />
     </p>
 
     
