--- a/HtmlPage5.html
+++ b/HtmlPage5.html
@@ -108,7 +108,7 @@
     </p>
     <p>
         Code: <br />
-        <img src="Chapter 5.3 example.png" />
+        <img src="Chapter 5.3 example.PNG" />
     </p>
 
    
