--- a/HtmlPage7.html
+++ b/HtmlPage7.html
@@ -67,7 +67,7 @@
        
        
        <p>    Code: <br />
-        <img src="Images ex.png" />
+        <img src="Images ex.PNG" />
     </p>
    
 
