--- a/HtmlPage8.html
+++ b/HtmlPage8.html
@@ -82,7 +82,7 @@
     <p>Deitel &amp;Associates, Inc. is an internationally recognized corporate training and publishing organization</p> <br />
     <p>
         Code: <br />
-        <img src="Chapter 5.2 example.png" width="1000" height="500" />
+        <img src="Chapter 5.2 example.PNG" width="1000" height="500" />
     </p>
 
 </body>
